# primo-bot

./: .env.example  .gitignore  Dockerfile  Dockerfile.python  README.md  docker-compose.yml  pom.xml
data/: meta-unread-config.json  orders-reminder-config.json  sales-report-config.json
docs/: python-migration-parity-plan.md
python/: README.md  pyproject.toml
python/primobot_py/: __init__.py  app.py  bot.py  claims.py  dashboard.py  main.py  meta_unread.py  meta_webhook.py  ops_alerts.py  orders.py  reminders.py  sales.py  settings.py  utils.py  vat.py
python/scripts/: export_fixtures.py
python/tests/: test_claims.py  test_dashboard.py  test_meta_unread.py  test_ops_alerts.py  test_reminders.py  test_sales_config_store.py  test_sales_dispatch_dedupe.py  test_sales_providers.py
src/main/java/dev/saseq/primobot/: PrimoBotApplication.java
src/main/resources/: application.properties
tools/parity/: README.md  compare_json.py  export_java_fixtures.sh  export_python_fixtures.sh
tools/parity/fixtures/java/commands/orders-reminder/: message_casual_single_thread.json
tools/parity/fixtures/java/commands/sales-report/: greeting_buckets.json  message_casual_with_failure.json  message_formal_daily_overview_top10.json
tools/parity/fixtures/java/commands/vat/: exclusive_basic.json  inclusive_basic.json
tools/parity/fixtures/python/commands/orders-reminder/: greeting_buckets.json  message_casual_single_thread.json
tools/parity/fixtures/python/commands/sales-report/: message_casual_with_failure.json  message_formal_daily_overview_top10.json
(+79 files in other folders)
